--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "postinstall": "ngcc"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +22,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "ngx-skeleton-loader": "^8.1.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
